# MirrorWorldReality

./: .gitignore  .replit  README.md  config.py  main.py  pyproject.toml  read.md  replit.md
Unity/: README.md
Unity/MirrorWorldPark/Assets/Materials/: AvatarSkin.mat  Grass.mat  TreeBark.mat  TreeLeaves.mat  Wood.mat
Unity/MirrorWorldPark/Assets/Prefabs/: BenchPrefab.prefab  TreePrefab.prefab
Unity/MirrorWorldPark/Assets/Scenes/: ParkScene.unity
Unity/MirrorWorldPark/Assets/Scripts/: Avatar3DModel.cs  AvatarAnimationController.cs  AvatarManager.cs  CameraController.cs  ParkEnvironmentManager.cs  ScreenshotManager.cs  UnityToiOSBridge.cs
Unity/MirrorWorldPark/Assets/Shaders/: AvatarSkinShader.shader
Unity/MirrorWorldPark/ProjectSettings/: ProjectSettings.asset
api/: models.py  processing.py  processing_real.py  processing_simple.py
iOS/: README.md
iOS/MirrorWorld/: AvatarProcessor.swift  ContentView.swift  ImagePicker.swift  Info.plist  MirrorWorldApp.swift  UnityViewWrapper.swift
iOS/MirrorWorld.xcodeproj/: project.pbxproj
iOS/MirrorWorld/Models/: Models.swift
iOS/MirrorWorld/Services/: APIService.swift  ImageProcessor.swift
iOS/MirrorWorld/Views/: CameraView.swift  OnboardingView.swift  ProcessingView.swift  UnityView.swift  WelcomeView.swift
static/: app.js  index.html  scene.js  style.css
