[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "mediapipe>=0.10.14",
    "numpy>=2.3.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
